[package]
name = "pbddns"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
gumdrop = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }
